Update HTML to include SVg image above directory

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <title>E90 Directory</title>
     </head>
     <body>
+
+        <div id="officeLayoutImageContainer">
+                <object data="./officeLayout.svg" type="image/svg+xml" id="officeLayoutImage">
+                    <img src="officeLayout.svg" />
+                  </object>
+        </div>
+
         <div id="directoryContainer">
         <div id="directory" class="flex-parent">
             
