--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             crossorigin="anonymous"></script>
             <script src="./app.js" type="text/javascript"></script>
             <link href="./directory.css" rel="stylesheet" />
+            <link rel="top icon" href="./favicon.ico" />
         <meta charset="UTF-8">
         <title>E90 Directory</title>
     </head>
